<resources>
    <string name="app_name">DropTime</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acesse">Acesse</string>
    <string name="com_e_mail_e_senha_para_entrar">Com e-mail e senha para entrar :</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="e_mail">E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="lembrar_minha_senha">Lembrar minha senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="acessar">Acessar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="crie_uma_senha">Crie uma senha:</string>
    <string name="repita_sua_senha_label">Repita sua senha:</string>
    <string name="repita_sua_senha_hint">Repita sua senha</string>
    <string name="informe_seu_e_mail_e_crie_uma_senha">Informe seu e-mail e crie uma senha:</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueceu_a_senha_title">Esqueceu a senha?</string>
    <string name="informe_seu_e_mail_e_enviaremos_os_pr_ximos_passos_para_recuperar_sua_conta">Informe seu e-mail e enviaremos os próximos passos para recuperar sua conta:</string>
    <string name="digite_seu_e_mail_label">Digite seu E-mail:</string>
    <string name="confirmar">Confirmar</string>
    <string name="informa_es_pessoais">Informações Pessoais</string>
    <string name="nome">Nome:</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="celular">Celular:</string>
    <string name="digite_seu_n_mero">Digite seu número</string>
    <string name="cep">CEP:</string>
    <string name="digite_seu_cep">Digite seu CEP</string>
    <string name="endere_o">Endereço:</string>
    <string name="digite_seu_endere_o">Digite seu endereço</string>
    <string name="n_mero">Número:</string>
    <string name="cidade">Cidade:</string>
    <string name="digite_sua_cidade">Digite sua cidade</string>
    <string name="estado">Estado:</string>
    <string name="digite_seu_estado">Digite seu estado</string>
    <string name="digite_o_numero_do_endereco">Digite o número do endereço</string>
    <string name="complemento">Complemento:</string>
    <string name="digite_seu_complemento">Digite seu complemento</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="drop_time_logo">drop_time_logo</string>
    <string name="carrinho_string">Carrinho</string>
    <string name="n_do_pedido__string">N do pedido:</string>
    <string name="_0001_string">#0001</string>
    <string name="r_65_00_string">R$ 65,00</string>
    <string name="r_70_00_string">R$ 70,00</string>
    <string name="pizza_grande_string">Pizza Grande </string>
    <string name="_35cm_12_pedaços_string">35cm - 12 pedaços</string>
    <string name="sabor_1_string">Sabor 1: </string>
    <string name="sabor_1_ek1_string">Sabor 1 </string>
    <string name="sabor_1_ek2_string">Sabor 1 </string>
    <string name="sabor_1_ek3_string">Sabor 1 </string>
    <string name="tamanho_das_pizzas_string">Tamanho das Pizzas</string>
    <string name="selecionar_string">Selecionar</string>
    <string name="_35cm_string">35 cm</string>
    <string name="_12_pedacos_string">12 pedaços</string>
    <string name="_4_sabores_string">4 sabores</string>
    <string name="escolha_os_sabores_da_sua_pizza_string">Escolha os sabores da sua pizza</string>
    <string name="salgado_ou_doce_string">Salgado ou Doce</string>
    <string name="escolha_string">Escolha</string>
    <string name="os_sabores_da_sua_pizza_string">os sabores da sua pizza</string>
    <string name="tamanho_string">Tamanho</string>
    <string name="das_pizzas_string">das pizzas</string>
    <string name="sabores_salgados__doces_string">Sabores salgados e doces</string>
    <string name="sabores_string">Sabores</string>
    <string name="salgados_e_doces_string">Salgados &amp; Doces</string>
    <string name="pix_string">PIX</string>
    <string name="cartao_de_debito_string">Cartão de Débito</string>
    <string name="cartao_de_credito_string">Cartão de Crédito</string>
    <string name="valores_string">Valores</string>
    <string name="pagamento_string">Pagamento</string>
    <string name="metodos_de_pagamento_string">Métodos de Pagamento</string>
    <string name="valor_total_no_cartao_string">Valor total no cartão</string>
    <string name="valor_total_do_pedido_string">Valor total do Pedido:</string>
    <string name="em_até_10x_de_r_7_00">(em até 10x de R$7,00)</string>
    valor_total_no_pix_string
    <string name="valor_total_no_pix_string">Valor total no PIX</string>
    <string name="economize_RS_5_00_string">(Economize R$5,00)</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="x">X</string>
    <string name="vector">vector</string>
    <string name="vector_ek2">vector_ek2</string>
    <string name="vector1">vector</string>
    <string name="vector2">vector</string>
    <string name="vector_ek6">vector_ek2</string>
    <string name="vector4">vector</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="mensagens_string">Mensagens</string>
    <string name="seu_pedido_est__pronto_____string">Seu Pedido est Pronto !!!</string>
    <string name="seu_pedido_j__pode_ser_retirado_na_recep__o_do_estabelecimento_string">Seu Pedido j pode ser retirado na recepo do estabelecimento </string>
    <string name="__0001_string">#0001</string>
    <string name="h__2_min__string">H 2 min.</string>

    <string name="meus_pedidos_string">Meus Pedidos</string>

    <string name="r__65_00_string">R$ 65,00</string>


    <string name="_35cm___12_peda_os_string">35cm - 12 pedaos</string>

    <string name="sabor_1___sabor_2___sabor_3_string">Sabor 1 - Sabor 2 - Sabor 3</string>

    <string name="status_do_pedido__finalizado_string">Status do Pedido:Finalizado</string>

    <string name="minha_conta_string">Minha Conta</string>

    <string name="henrique_zimermann_string">Henrique Zimermann</string>

    <string name="henriquezimermann_edu_univali_br_string">henriquezimermann@edu.univali.br</string>
    <string name="dados_string">Dados Pessoais</string>
    <string name="atendimento_string">Atendimento</string>
    <string name="sair_string">Sair</string>
</resources>