<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:ignore="MissingConstraints,UselessParent">

	<RelativeLayout
		android:id="@+id/content_container"
		android:layout_width="wrap_content"
		android:layout_height="730dp"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="0dp">

		<RelativeLayout
			android:id="@+id/header"
			android:layout_width="match_parent"
			android:layout_height="105dp"
			android:background="@color/colorVermelhoPrincipal"
			tools:ignore="MissingConstraints">

			<RelativeLayout
				android:id="@+id/group_181"
				android:layout_width="352dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="30dp"
				android:layout_marginTop="52dp"
				tools:ignore="UselessParent">

				<RelativeLayout
					android:id="@+id/logo_rocket"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<ImageView
						android:id="@+id/rocket"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:contentDescription="@string/todo3"
						android:src="@drawable/rocket"
						tools:ignore="ImageContrastCheck" />

				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/logo_ringunfilled"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="330dp"
					android:layout_marginTop="0dp">

					<ImageView
						android:id="@+id/ringunfilled"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:contentDescription="@string/todo4"
						android:src="@drawable/ringunfilled"
						tools:ignore="ImageContrastCheck" />

				</RelativeLayout>

			</RelativeLayout>

		</RelativeLayout>



		<TextView android:id="@+id/meus_pedidos"
			android:textStyle="bold"
			android:layout_gravity="center_horizontal|center"
			android:gravity="center"
			android:textSize="35sp"
			android:layout_marginLeft="-6dp"
			android:layout_marginTop="104dp"
			android:layout_width="383dp"
			android:layout_height="96.5dp"
			android:text="@string/meus_pedidos_string"
			/>

		<Button
			android:id="@+id/MensagensBackButton"
			android:layout_width="20dp"
			android:layout_height="35dp"
			android:layout_marginTop="130dp"
			android:layout_marginStart="18dp"
			android:background="@drawable/vector" />


		<RelativeLayout
			android:id="@+id/Mensagem"
			android:layout_width="410dp"
			android:layout_height="150dp"
			android:layout_marginStart="9dp"
			android:layout_marginTop="190dp"
			android:layout_marginEnd="9dp"
			android:background="@color/colorVermelhoPrincipal">

			<TextView android:id="@+id/n_do_pedido_"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textColor="@color/n_do_pedido__color"
				android:layout_marginLeft="275dp"
				android:layout_marginTop="7dp"
				android:layout_width="66dp"
				android:layout_height="22.26dp"
				android:text="@string/n_do_pedido__string"
				/>

			<TextView android:id="@+id/__0001"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textColor="@color/_bg__my_requests_screen_color"
				android:layout_marginLeft="275dp"
				android:layout_marginTop="23dp"
				android:layout_width="67dp"
				android:layout_height="29dp"
				android:text="@string/__0001_string"
				/>

			<TextView android:id="@+id/r__65_00"

				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="12sp"
				android:textColor="@color/n_do_pedido__color"
				android:layout_marginLeft="275dp"
				android:layout_marginTop="51dp"
				android:layout_width="68dp"
				android:layout_height="33.22dp"
				android:text="@string/r__65_00_string"
				/>

			<ImageView android:id="@+id/pexels_rene_strgar_13814644_2"
				android:src="@drawable/foto_pizza"
				android:contentDescription="pexels_rene_strgar_13814644_2"
				android:layout_marginStart="12dp"
				android:layout_marginTop="15dp"
				android:layout_width="82dp"
				android:layout_height="89dp" />

			<TextView android:id="@+id/pizza_grande"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="@color/n_do_pedido__color"
				android:layout_marginLeft="94dp"
				android:layout_marginTop="7dp"
				android:layout_width="181dp"
				android:layout_height="44dp"
				android:text="@string/pizza_grande_string"
				/>

			<TextView android:id="@+id/_35cm___12_peda_os"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textColor="@color/n_do_pedido__color"
				android:layout_marginLeft="95dp"
				android:layout_marginTop="37dp"
				android:layout_width="176dp"
				android:layout_height="26dp"
				android:text="@string/_35cm___12_peda_os_string"
				/>

			<TextView android:id="@+id/sabor_1___sabor_2___sabor_3"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textColor="@color/n_do_pedido__color"
				android:layout_marginLeft="95dp"
				android:layout_marginTop="59dp"
				android:layout_width="176dp"
				android:layout_height="26dp"
				android:text="@string/sabor_1___sabor_2___sabor_3_string"
				/>

			<TextView android:id="@+id/status_do_pedido__finalizado"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textColor="@color/_bg__my_requests_screen_color"
				android:layout_marginLeft="95dp"
				android:layout_marginTop="78dp"
				android:layout_width="237dp"
				android:layout_height="42dp"
				android:text="@string/status_do_pedido__finalizado_string"
				/>



		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/bar"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_marginStart="0dp"
			android:layout_marginTop="670dp"
			android:background="@color/colorCinzaFundo">

			<RelativeLayout
				android:id="@+id/rectangle_161"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="-57dp"
				tools:ignore="VisualLintBounds">

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/profile"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="340dp"
				android:layout_marginTop="16dp">

				<Button
					android:id="@+id/icon_profile"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:background="@drawable/profile"
					android:contentDescription="@string/vector2"
					tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/pizza"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="16dp">

				<Button
					android:id="@+id/icon_pizza"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:background="@drawable/pizza"
					android:contentDescription="@string/vector"
					tools:ignore="TouchTargetSizeCheck" />

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/cart"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="190dp"
				android:layout_marginTop="16dp">

				<Button
					android:id="@+id/icon_cart"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:background="@drawable/cart"
					android:contentDescription="@string/vector_ek6"
					tools:ignore="TouchTargetSizeCheck" />

			</RelativeLayout>
		</RelativeLayout>
	</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>