<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:ignore="MissingConstraints,UselessParent">

	<RelativeLayout
		android:id="@+id/content_container"
		android:layout_width="wrap_content"
		android:layout_height="730dp"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="0dp">

		<RelativeLayout
			android:id="@+id/header"
			android:layout_width="match_parent"
			android:layout_height="105dp"
			android:background="@color/colorVermelhoPrincipal"
			tools:ignore="MissingConstraints">

			<RelativeLayout
				android:id="@+id/group_181"
				android:layout_width="352dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="30dp"
				android:layout_marginTop="52dp"
				tools:ignore="UselessParent">

				<RelativeLayout
					android:id="@+id/logo_rocket"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<ImageView
						android:id="@+id/rocket"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:contentDescription="@string/todo3"
						android:src="@drawable/rocket"
						tools:ignore="ImageContrastCheck" />

				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/logo_ringunfilled"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="330dp"
					android:layout_marginTop="0dp">

					<ImageView
						android:id="@+id/ringunfilled"
						android:layout_width="30dp"
						android:layout_height="30dp"
						android:contentDescription="@string/todo4"
						android:src="@drawable/ringunfilled"
						tools:ignore="ImageContrastCheck" />

				</RelativeLayout>

			</RelativeLayout>

		</RelativeLayout>



		<TextView android:id="@+id/minha_conta"
			android:textStyle="bold"
			android:layout_gravity="center_horizontal|center"
			android:gravity="center"
			android:textSize="35sp"
			android:textColor="@color/minha_conta_color"
			android:layout_marginLeft="-6dp"
			android:layout_marginTop="104dp"
			android:layout_width="383dp"
			android:layout_height="96.5dp"
			android:text="@string/minha_conta_string"
			/>


		<Button
			android:id="@+id/MensagensBackButton"
			android:layout_width="20dp"
			android:layout_height="35dp"
			android:layout_marginTop="130dp"
			android:layout_marginStart="18dp"
			android:background="@drawable/vector" />


		<RelativeLayout
			android:id="@+id/perfil"
			android:layout_width="410dp"
			android:layout_height="100dp"
			android:layout_marginStart="9dp"
			android:layout_marginTop="190dp"
			android:layout_marginEnd="9dp">

			<View   android:id="@+id/rectangle_160"
				android:background="@color/colorCinza"
				android:layout_marginStart="31dp"
				android:layout_marginTop="14dp"
				android:layout_width="308dp"
				android:layout_height="62dp" />

			<ImageView android:id="@+id/ellipse_6"
				android:src="@drawable/ellipse_6"
				android:contentDescription="ellipse_6"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="90dp"
				android:layout_height="90dp" />

			<TextView android:id="@+id/henrique_zimermann"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="16sp"
				android:textColor="@color/henrique_zimermann_color"
				android:layout_marginLeft="114dp"
				android:layout_marginTop="20dp"
				android:layout_width="186dp"
				android:layout_height="36dp"
				android:text="@string/henrique_zimermann_string"
				/>

			<TextView android:id="@+id/henriquezimermann_edu_univali_br"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textColor="@color/henrique_zimermann_color"
				android:layout_marginLeft="115dp"
				android:layout_marginTop="45dp"
				android:layout_width="183dp"
				android:layout_height="23dp"
				android:text="@string/henriquezimermann_edu_univali_br_string"
				/>



		</RelativeLayout>

	<RelativeLayout
		android:id="@+id/info_pizza"
		android:layout_width="394dp"
		android:layout_height="match_parent"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="250dp">

		<Button
			android:id="@+id/buttonPerfilPedidos"
			android:layout_width="320dp"
			android:layout_height="55dp"
			android:layout_gravity="center_horizontal|center"
			android:layout_marginTop="40dp"
			android:gravity="center"
			android:layout_marginStart="30dp"
			android:text="@string/meus_pedidos_string"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold"
			android:background="@color/colorVermelhoPrincipal"/>

		<Button
			android:id="@+id/buttonPerfilMensagens"
			android:layout_width="320dp"
			android:layout_height="55dp"
			android:layout_gravity="center_horizontal|center"
			android:layout_marginTop="100dp"
			android:gravity="center"
			android:layout_marginStart="30dp"
			android:text="@string/mensagens_string"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold"
			android:background="@color/colorVermelhoPrincipal"/>

		<Button
			android:id="@+id/buttonPerfilDadosPessoais"
			android:layout_width="320dp"
			android:layout_height="55dp"
			android:layout_gravity="center_horizontal|center"
			android:layout_marginTop="160dp"
			android:gravity="center"
			android:layout_marginStart="30dp"
			android:text="@string/dados_string"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold"
			android:background="@color/colorVermelhoPrincipal"/>

		<Button
			android:id="@+id/buttonPerfilEndereco"
			android:layout_width="320dp"
			android:layout_height="55dp"
			android:layout_below="@+id/buttonPerfilDadosPessoais"
			android:layout_gravity="center_horizontal|center"
			android:layout_marginStart="30dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="0dp"
			android:background="@color/colorVermelhoPrincipal"
			android:gravity="center"
			android:text="@string/endere_o"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold" />

		<Button
			android:id="@+id/buttonAtendimento"
			android:layout_width="320dp"
			android:layout_height="55dp"
			android:layout_below="@+id/buttonPerfilEndereco"
			android:layout_gravity="center_horizontal|center"
			android:layout_marginStart="30dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="0dp"
			android:background="@color/colorVermelhoPrincipal"
			android:gravity="center"
			android:text="@string/atendimento_string"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold" />

		<Button
			android:id="@+id/buttonPerfilSair"
			android:layout_width="320dp"
			android:layout_height="55dp"
			android:layout_below="@+id/buttonAtendimento"
			android:layout_gravity="center_horizontal|center"
			android:layout_marginStart="30dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="0dp"
			android:background="@color/colorVermelhoPrincipal"
			android:gravity="center"
			android:text="@string/sair_string"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:textStyle="bold" />

	</RelativeLayout>

		<RelativeLayout
			android:id="@+id/bar"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_marginStart="0dp"
			android:layout_marginTop="670dp"
			android:background="@color/colorCinzaFundo">

			<RelativeLayout
				android:id="@+id/rectangle_161"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="-57dp"
				tools:ignore="VisualLintBounds">

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/profile"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="340dp"
				android:layout_marginTop="16dp">

				<Button
					android:id="@+id/icon_profile"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:background="@drawable/profile"
					android:contentDescription="@string/vector2"
					tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/pizza"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="16dp">

				<Button
					android:id="@+id/icon_pizza"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:background="@drawable/pizza"
					android:contentDescription="@string/vector"
					tools:ignore="TouchTargetSizeCheck" />

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/cart"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="190dp"
				android:layout_marginTop="16dp">

				<Button
					android:id="@+id/icon_cart"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:background="@drawable/cart"
					android:contentDescription="@string/vector_ek6"
					tools:ignore="TouchTargetSizeCheck" />

			</RelativeLayout>
		</RelativeLayout>
	</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>